syntax = "proto2";

message xrpc_request
{
    optional    string      service_name    = 1;
    optional    string      method_name     = 2;
    optional    int32       service_id      = 3;
    optional    int32       method_id       = 4;
    optional    xrpc_param  params          = 5;
}

message xrpc_int_array
{
    repeated    int32       values          = 1;
}

message xrpc_bytes_array
{
    repeated    bytes      values           = 1;
}

message xrpc_str_array
{
    repeated    string     values           = 1;
}

message xrpc_rawdata
{
    required    bytes       data            = 1;
}

message xrpc_param
{
    repeated    int32           key_type        = 1;
    repeated    string          key_str         = 2;
    repeated    bool            key_bool        = 3;
    repeated    double          key_double      = 4;
    repeated    int32           key_int         = 5;

    repeated    int32           value_type      = 6;
    repeated    bytes           value_str       = 7;
    repeated    bool            value_bool      = 8;
    repeated    double          value_double    = 9;
    repeated    int32           value_int       = 10;
    repeated    int64           value_int64     = 11;
    repeated    float           value_float     = 12;
    repeated    xrpc_param      value_table     = 13;
}
